# bssl-ram

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance_regression.yml  profile_request.yml
.github/workflows/: ci.yml
bench/: README.md  REPORT.md  analyze.R
bench/configs/: A1-procwalk.toml  A2-cnproc.toml  A3-cnproc-bpf.toml  B-psi-off.toml  B-psi-on.toml  E-aggressive.toml
bench/results/: .gitkeep
bench/scripts/: bench-cpu.sh  bench-psi-latency.sh  bench-real-compress.sh  bench-recompression.sh
bridge/: Cargo.toml
bridge/src/: client.rs  install.rs  main.rs  nmh.rs
daemon/: Cargo.toml  build.rs
daemon/examples/: bench_batching.rs  compress_real.rs  compress_test.rs  cpu_test.rs  scan_test.rs
daemon/src/: bpf_cpu_tracker.rs  compressor.rs  config.rs  main.rs  proc_connector.rs  process_table.rs  psi.rs  scanner.rs  server.rs  signals.rs  state.rs  telemetry.rs  zram.rs
daemon/src/bpf/: cpu_tracker.bpf.c
daemon/systemd/: README.md  bssl-ram@.service
extension/: README.md  background.js  content-script.js  manifest.json  options.html  options.js
