[package]
name = "bssl-ram"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
tokio = { workspace = true }
axum = "0.8"
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
toml = "1.1.2+spec-1.1.0"
libc = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# eBPF runtime — loads the compiled cpu_tracker BPF skeleton at startup
# and reads its task-runtime map per scan cycle. Optional at runtime via
# `enable_bpf_cpu_tracker` config; the daemon falls back to /proc/PID/stat
# polling when the load fails (kernel too old, missing CAP_BPF, ...).
libbpf-rs = "0.24"

[dev-dependencies]
http-body-util = { workspace = true }
tempfile = "3"

[build-dependencies]
# Compiles the BPF program (src/bpf/cpu_tracker.bpf.c) with clang and
# generates a Rust skeleton in OUT_DIR. Needs `clang` + `bpftool` on
# the build machine; build.rs auto-generates vmlinux.h from
# /sys/kernel/btf/vmlinux so no third-party headers are checked in.
libbpf-cargo = "0.24"
